# smart-plug

./: Cargo.toml  Makefile  README.md  Xargo.toml  server.js  toggle.js  webclient.ino
src/: main.rs
